--- a/package.json
+++ b/package.json
@@ -4,12 +4,21 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "tsx watch src/server.ts",
+    "lint" : "eslint src --ext .ts --fix"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@rocketseat/eslint-config": "^2.2.2",
+    "@types/eslint": "^8.56.10",
+    "@types/node": "^20.12.12",
+    "eslint": "^8.57.0",
+    "tsx": "^4.10.5",
     "typescript": "^5.4.5"
+  },
+  "dependencies": {
+    "fastify": "^4.27.0"
   }
 }
